# arma2numpy

./: CMakeLists.txt  README.md
include/arma2numpy/: hello_ext.hpp  list_vector.hpp  numpy_arma.hpp
src/: hello_ext.cpp  list_vector.cpp  numpy_arma.cpp
test/: Tarma2numpy.cpp  Tarma2numpy.hpp  boostpython_arma_wrapper.cpp  run_test.py
